[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/MainMenuController.gd" type="Script" id=3]
[ext_resource path="res://Scripts/LevelsMenuController.gd" type="Script" id=4]

[node name="MainMenuScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer"]
margin_left = 459.0
margin_top = 272.0
margin_right = 564.0
margin_bottom = 327.0
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayCampaignButton" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
margin_right = 105.0
margin_bottom = 20.0
mouse_filter = 1
shortcut_in_tooltip = false
text = "CAMPAIGN"

[node name="PlayInfiniteButton" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 105.0
margin_bottom = 55.0
shortcut_in_tooltip = false
text = "INFINITE MOD"

[node name="LevelsMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="LevelsMenu"]
margin_right = 128.0
margin_bottom = 64.0
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="LevelsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="LevelsMenu/CenterContainer"]
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="MainMenu/CenterContainer/VBoxContainer/PlayCampaignButton" to="MainMenu" method="_on_PlayCampaignButton_button_up"]
[connection signal="button_up" from="MainMenu/CenterContainer/VBoxContainer/PlayInfiniteButton" to="MainMenu" method="_on_PlayInfiniteButton_button_up"]
[connection signal="button_up" from="LevelsMenu/BackButton" to="MainMenu" method="_on_PlayCampaignButton_button_up"]
